added embed for message

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/AaronFrans/SchlattIsOverBot#readme",
   "dependencies": {
+    "discord-embed-maker": "^3.0.8",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "twit": "^2.2.11"
